--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,16 @@
   },
   "dependencies": {
     "core-js": "^3.4.4",
+    "cors": "^2.8.5",
     "vue": "^2.6.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
     "vue-template-compiler": "^2.6.10"
-  }
+  },
+  "description": "## Project setup ``` npm install ```",
+  "main": "babel.config.js",
+  "author": "",
+  "license": "ISC"
 }
