--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,12 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server:dev": "nodemon server.js",
-    "seeds": "mongo < db/seeds.js"
+    "seeds": "mongo < db/seeds.js",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,5 +14,6 @@
     "express": "^4.17.1",
     "mongodb": "^3.4.1",
     "nodemon": "^2.0.2"
-  }
+  },
+  "description": ""
 }
