--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongodb": "^3.4.1",
-    "nodemon": "^2.0.2"
+    "mongodb": "^3.4.1"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^2.0.2"
+  }
 }
