--- a/client/package.json
+++ b/client/package.json
@@ -9,14 +9,11 @@
   "dependencies": {
     "chart.js": "^2.9.3",
     "core-js": "^3.4.4",
-<<<<<<< HEAD
     "vue": "^2.6.10",
     "vue-chart.js": "^0.2.0",
-    "vue-chartjs": "^3.5.0"
-=======
-    "cors": "^2.8.5",
+    "vue-chartjs": "^3.5.0",
     "vue": "^2.6.11"
->>>>>>> 89fc39e8e1292fc9a08c8c7d9cde7d345eede822
+
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
