--- a/client/package.json
+++ b/client/package.json
@@ -9,27 +9,23 @@
   "dependencies": {
     "chart.js": "^2.9.3",
     "core-js": "^3.4.4",
-<<<<<<< HEAD
     "vue": "^2.6.10",
     "vue-chart.js": "^0.2.0",
     "vue-chartjs": "^3.5.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
 
-=======
-<<<<<<< HEAD
+
     "vue": "^2.6.11",
     "vue": "^2.6.10",
     "vue-chart.js": "^0.2.0",
     "vue-chartjs": "^3.5.0",
-    "cors": "^2.8.5"
-=======
+    "cors": "^2.8.5",
     "vue": "^2.6.10",
     "vue-chart.js": "^0.2.0",
     "vue-chartjs": "^3.5.0",
     "vue": "^2.6.11"
 
->>>>>>> b00ef7c52ef18f4235a1d9f4c7cb71dfd2e9c33b
->>>>>>> develop
+
   },
 
   "devDependencies": {
