--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,9 @@
   "dependencies": {
     "chart.js": "^2.9.3",
     "core-js": "^3.4.4",
-    "vue": "^2.6.10",
+    "vue": "^2.6.11",
     "vue-chart.js": "^0.2.0",
-    "vue-chartjs": "^3.5.0",
-    "vue": "^2.6.11"
-
+    "vue-chartjs": "^3.5.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
