--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,17 @@
   },
   "dependencies": {
     "chart.js": "^2.9.3",
+    "colors": "^1.4.0",
     "core-js": "^3.4.4",
+    "google-finance": "^0.1.12",
+    "lodash": "^4.17.15",
+    "underscore": "^1.9.2",
     "vue": "^2.6.11",
     "vue-carousel": "^0.18.0",
     "vue-chart.js": "^0.2.0",
     "vue-chartjs": "^3.5.0",
-    "vuescroll-carousel": "0.0.13"
+    "vuescroll-carousel": "0.0.13",
+    "yahoo-finance": "^0.3.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
